Bug 405497 - Calling RunInBatchedMode within a RunBatched implementation hangs.  r=Mano